prevent xss vulnerability in posts

--- a/tridents/templates/home.html
+++ b/tridents/templates/home.html
@@ -63,7 +63,7 @@
             </div>
 
             <div class="column">
-                <h1 class="title">Posts</h1>
+                <h2 class="title is-2"><i class="fa fa-fw fa-newspaper-o"></i> Posts</h2>
 
                 {% for post in posts %}
                         <div class="message post-preview">
